# withwait

./: README.md  REAME.md  pyproject.toml
.github/workflows/: publish.yml  python-app.yml
tests/: __init__.py  withwait_test.py
withwait/: __init__.py  __withwait.py
