[tool.poetry]
name = "withwait"
version = "0.1.0"
description = "A simple utility to ensure that sleep operations always complete"
authors = ["Miguel Guthridge <hdsq@outlook.com.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.1"
typing-extensions = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
mypy = "^1.2.0"
flake8 = "^6.0.0"
Jestspectation = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
